Inserir uma logo na navbar

--- a/VolunTree_API/Pages/Shared/_Layout.cshtml
+++ b/VolunTree_API/Pages/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
 <body>
     <nav class="navbar navbar-expand-md bg-success bg-gradient">
         <div class="container-fluid">
-            <a class="navbar-brand text-light" href="#">LOGO</a>
+            <img src="VolunTree_logo_def_resized.png" alt="voluntree logo" height="80px" width="80px"/>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
