--- a/VolunTree_API/Pages/Voluntarios.cshtml
+++ b/VolunTree_API/Pages/Voluntarios.cshtml
@@ -1,17 +1,41 @@
 ﻿@page
+@model VolunTree_API.Pages.VoluntariosModel
+@section Styles{
+    <link href="~/css/ong.css" rel="stylesheet"/>
+}
 <!--============INICIO DO <MAIN>============-->
 <!--div BACKGROUD QG02-->
-<main class="mt-5">
-    <div class="container">
-        <h1 id="Ongs-title" class="h1">voluntarios</h1>
-        <div class="border rounded" id="menu-box">
+<main class="m-5">
+    <div class="row justify-content-between">
+        <div class="col-3">
+            <h1 id="Ongs-title" class="h1">Voluntários</h1>
+        </div>
+        <div class="col-3">
+            <button class="btn btn-success px-4">
+                <a href="@Url.Page("CadastroVoluntario")" class="text-white">Cadastre-se</a>
+            </button>
         </div>
     </div>
-</main>
-
-
-
-
+     <div class="border rounded" id="menu-box">
+            @if (Model.Voluntarios != null && Model.Voluntarios.Count > 0)
+            {
+                foreach (var voluntario in Model.Voluntarios)
+                {
+                    <div class="ong-card mx-2 border-top border-bottom">
+                        <div class="row">
+                            <h3 class="col">@voluntario.NomeVolun</h3>
+                            <p class="col">Email: @voluntario.EmailVolun</p>
+                        </div>
+                        <p class='text-secondary'>Missão: @voluntario.Habilidades</p>
+                        <p class='text-secondary'>Necessidades: @voluntario.Interesses</p>
+                    </div>
+                }
+            }
+            else
+            {
+                <p class="text-secondary">Nenhuma ONG encontrada.</p>
+            }
+        </div>
 <!-- Inicio MODAL Autentificação-->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -28,7 +52,6 @@
                 <div class="btn-group mx-auto " style="width:100%" role="group" aria-label="Basic radio toggle button group">
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
                     <label class="btn btn-outline-success" for="btnradio1">Entrar</label>
-
                     <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
                     <label class="btn btn-outline-success" for="btnradio2">Cadastrar</label>
                 </div>
@@ -44,20 +67,21 @@
 <!--USAR no Arquivo ONGS para mudar de página TESTE:SEM O D-NONE -->
 <div class="btn-toolbar d-none" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group me-2" role="group" aria-label="First group">
-        <button type="button" class="btn btn-primary">1</button>
-        <button type="button" class="btn btn-info">2</button>
-        <button type="button" class="btn btn-primary">3</button>
+        <button type="button" class="btn btn-secondary">1</button>
+        <button type="button" class="btn btn-secondary">2</button>
+        <button type="button" class="btn btn-secondary">3</button>
 
     </div>
     <div class="btn-group me-2" role="group" aria-label="Second group">
         <button type="button" class="btn btn-secondary">4</button>
-        <button type="button" class="btn btn-info">5</button>
-        <button type="button" class="btn btn-primary">6</button>
+        <button type="button" class="btn btn-secondary">5</button>
+        <button type="button" class="btn btn-secondary">6</button>
         <button type="button" class="btn btn-secondary">7</button>
     </div>
     <div class="btn-group" role="group" aria-label="Third group">
-        <button type="button" class="btn btn-info">8</button>
+        <button type="button" class="btn btn-secondary">8</button>
     </div>
 </div>
 
 <!--=============FIM DO <MAIN>=============-->
+</main>
