Correções e aprimoramentos das páginas

--- a/VolunTree_API/Pages/Index.cshtml
+++ b/VolunTree_API/Pages/Index.cshtml
@@ -13,10 +13,24 @@
 
 <!--============INICIO DO <MAIN>============-->
 <!--div BACKGROUD QG02-->
-<div id="background-home">
-    <h2 id="h2-cor">Unidos para uma evolução maior</h2><!--QG03-->
-    <h3 id="h3-cor">Juntos seremos imbativeis</h3>
+<div>
+    <div style="position: absolute;   position: absolute; 
+  left: 0; 
+  right: 0;
+  top:50%;
+
+  margin-inline: auto; 
+  width: fit-content;
+  height:fit-content;">
+        <h2 id="h2-cor">Unidos para uma evolução maior</h2><!--QG03-->
+        <h3 id="h3-cor">Juntos seremos imbativeis</h3>
+
+    </div>
+    <img src="./ongs.jpeg" style="width: 100%;">
+    
+    
 </div><!--background-->
+
 <!-- Inicio MODAL Autentificação-->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
