--- a/VolunTree_API/Pages/Ongs.cshtml
+++ b/VolunTree_API/Pages/Ongs.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <!-- Toolbar de paginação -->
-        <div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
+        <!--<div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group me-2" role="group" aria-label="First group">
                 <button type="button" class="btn btn-secondary">1</button>
                 <button type="button" class="btn btn-secondary">2</button>
@@ -54,7 +54,7 @@
             </div>
             <div class="btn-group" role="group" aria-label="Third group">
                 <button type="button" class="btn btn-secondary">8</button>
-            </div>
+            </div>-->
         </div>
     </div><!--FIM DO CONTAINER-->
 </main>
