--- a/VolunTree_API/Pages/Voluntarios.cshtml
+++ b/VolunTree_API/Pages/Voluntarios.cshtml
@@ -65,7 +65,7 @@
     </div>
 </div><!--Fim MODAL-->
 <!--USAR no Arquivo ONGS para mudar de página TESTE:SEM O D-NONE -->
-<div class="btn-toolbar d-none" role="toolbar" aria-label="Toolbar with button groups">
+<!--<div class="btn-toolbar d-none" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group me-2" role="group" aria-label="First group">
         <button type="button" class="btn btn-secondary">1</button>
         <button type="button" class="btn btn-secondary">2</button>
@@ -80,7 +80,7 @@
     </div>
     <div class="btn-group" role="group" aria-label="Third group">
         <button type="button" class="btn btn-secondary">8</button>
-    </div>
+    </div>-->
 </div>
 
 <!--=============FIM DO <MAIN>=============-->
