--- a/VolunTree_API/Pages/Shared/_Layout.cshtml
+++ b/VolunTree_API/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,14 @@
     <title>@ViewData["Title"]</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="~/css/main.css" rel="stylesheet" />
+    <!--fonte Commissioner-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap" rel="stylesheet">
+    <!--fonte Encode Sans-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&family=Encode+Sans+Expanded:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     @RenderSection("Styles", required: false)
     <style>
@@ -21,8 +29,33 @@
         main {
             flex: 1;
         }
-        h2, h3 {
-            font-family: montserrat;
+        h1{
+            font-family: "Encode Sans Expanded", sans-serif;
+            font-weight: 700;
+            font-style: normal;
+        }
+        h2{
+            font-family: "Encode Sans Expanded", sans-serif;
+            font-weight: 500;
+            font-style: normal;
+        }
+
+        h3{
+            font-family: "Encode Sans Expanded", sans-serif;
+            font-weight: 400;
+            font-style: normal;
+        }
+        p {
+            font-family: "Commissioner", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
+        }
+        div {
+            font-family: "Commissioner", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
         }
 
         #background-home {
@@ -41,6 +74,7 @@
         #input-height {
             height: 70%;
         }
+
     </style>
 </head>
 <body>
@@ -52,10 +86,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active text-light" aria-current="page" href="@Url.Page("Index")">Home</a>
-                    <a class="nav-link text-light" href="@Url.Page("Voluntarios")">Voluntariado</a>
-                    <a class="nav-link text-light" href="@Url.Page("Ongs")">ONGs</a>
-                    <a class="nav-link text-light" href="@Url.Page("Sobre")">Sobre o Volutree</a>
+                    <a class="nav-link active text-light " aria-current="page" href="@Url.Page("Index")">Home</a>
+                    <a class="nav-link text-light mx-3" href="@Url.Page("Voluntarios")">Voluntariado</a>
+                    <a class="nav-link text-light mx-3" href="@Url.Page("Ongs")">ONGs</a>
+                    <a class="nav-link text-light mx-3" href="@Url.Page("Sobre")">Sobre o Voluntree</a>
                 </div>
             </div>
             <div class="d-flex">
