--- a/VolunTree_API/Pages/Shared/_Layout.cshtml
+++ b/VolunTree_API/Pages/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                 <form class="d-flex m-auto" role="search">
                     <input class="form-control me-2 w-auto" id="input-height" type="search" placeholder="Pesquisar ONGs" aria-label="Search">
                 </form>
-                <button type="button" class="btn btn-light m-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Entrar</button>
+                <button type="button" class="btn btn-light m-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><a href="@Url.Page("Login")">Entrar</a></button>
             </div>
         </div>
     </nav>
