--- a/VolunTree_API/Pages/Index.cshtml
+++ b/VolunTree_API/Pages/Index.cshtml
@@ -22,9 +22,9 @@
   margin-inline: auto; 
   width: fit-content;
   height:fit-content;">
-        <h2 id="h2-cor">Unidos para uma evolução maior</h2><!--QG03-->
-        <h3 id="h3-cor">Juntos seremos imbativeis</h3>
-
+        <h2 id="h2-cor" class="center">Unidos para uma evolução maior</h2><!--QG03-->
+        <h3 id="h3-cor" class="center">site para ONGS e voluntarios</h3>
+        <!--<a href="@Url.Page("Login")" id="btn-entrar" class="mx-auto"><button type="button" class="btn btn-light m-2 mx-auto" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Entrar</button></a>-->
     </div>
     <img src="./ongs.jpeg" style="width: 100%;">
     
@@ -81,6 +81,7 @@
 
 <!--=============FIM DO <MAIN>=============-->
 <!--Parte que da página HTML Sobre.html-->
+<hr>
 <div class="d-flex">
     <!--tirei o row-->
     <div class="col-2 p-2">
