--- a/VolunTree_API/Pages/Sobre.cshtml
+++ b/VolunTree_API/Pages/Sobre.cshtml
@@ -31,7 +31,7 @@
     </div>
 </div><!--Fim MODAL-->
 <!--EquipeCão ++++++++++-->
-<div class="d-flex">
+<div class="container mt-3 d-flex">
     <!--tirei o row-->
     <div class="col-2 p-2">
         <div class="list-group" id="list-tab" role="tablist">
@@ -54,7 +54,7 @@
 </div><!--EQUIEPECÃO-->
 <!--=============FIM DO <MAIN>=============-->
 <!--USAR no Arquivo ONGS para mudar de página TESTE:SEM O D-NONE -->
-<div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
+<!--<div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group me-2" role="group" aria-label="First group">
         <button type="button" class="btn btn-primary">1</button>
         <button type="button" class="btn btn-info">2</button>
@@ -70,4 +70,4 @@
     <div class="btn-group" role="group" aria-label="Third group">
         <button type="button" class="btn btn-info">8</button>
     </div>
-</div>
+</div>-->
