--- a/VolunTree_API/Pages/Voluntarios.cshtml
+++ b/VolunTree_API/Pages/Voluntarios.cshtml
@@ -5,7 +5,7 @@
 }
 <!--============INICIO DO <MAIN>============-->
 <!--div BACKGROUD QG02-->
-<main class="m-5">
+<main class="mt-3 container">
     <div class="row justify-content-between">
         <div class="col-3">
             <h1 id="Ongs-title" class="h1">Voluntários</h1>
