--- a/VolunTree_API/Pages/login.cshtml
+++ b/VolunTree_API/Pages/login.cshtml
@@ -1,7 +1,7 @@
 @page
 
 <main>
-    <div class="container">
+    <div class="container mt-3">
         <h1>Login</h1>
         <form class="m-3 border p-2" method="post">
             <label class="form-label" for="input-email">Email</label>
