--- a/VolunTree_API/Pages/CadastroOng.cshtml
+++ b/VolunTree_API/Pages/CadastroOng.cshtml
@@ -6,8 +6,9 @@
 }
 
 <main class="flex-grow-1">
+    <div class="container mt-3">
     <form class="m-3 border" method="post">
-        <h1 class="h1">Cadastrar ONG</h1>
+        <h1 class="h1 mx-3 text-center">Cadastrar ONG</h1>
         <div class="p-3">
             <div id="div-cnpj">
                 <label class="form-label" for="input-cnpj">CNPJ</label>
@@ -46,5 +47,5 @@
             </div>
         </div>
     </form>
-
+    </div>
 </main>
