--- a/VolunTree_API/Pages/CadastroVoluntario.cshtml
+++ b/VolunTree_API/Pages/CadastroVoluntario.cshtml
@@ -6,8 +6,9 @@
 }
 
 <main class="flex-grow-1">
+    <div class="container mt-3">
     <form class="m-3 border" method="post">
-        <h1 class="h1">Cadastrar Voluntário</h1>
+        <h1 class="h1 mx-3 text-center">Cadastrar Voluntário</h1>
         <div class="p-3">
             <div id="div-cpf">
                 <label class="form-label" for="input-cpf">CPF</label>
@@ -42,6 +43,7 @@
             </div>
         </div>
     </form>
+    </div>
 </main>
 @section Scripts{
     @if (!string.IsNullOrEmpty(Model.Message))
