Correção - Erro de img background
Erro de carregamento de img corrigido

--- a/VolunTree_API/Pages/Index.cshtml
+++ b/VolunTree_API/Pages/Index.cshtml
@@ -26,7 +26,7 @@
         <h3 id="h3-cor" class="center">site para ONGS e voluntarios</h3>
         <!--<a href="@Url.Page("Login")" id="btn-entrar" class="mx-auto"><button type="button" class="btn btn-light m-2 mx-auto" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Entrar</button></a>-->
     </div>
-    <img src="./ongs.jpeg" style="width: 100%;">
+    <img src="https://github.com/CaioMtho/VolunTree/blob/bb5549a023d27d95b1eb081b8c44d700ffb4f551/VolunTree_API/wwwroot/ongs.jpeg?raw=true" style="width: 100%;">
     
     
 </div><!--background-->
