atualização da página sobre

--- a/VolunTree_API/Pages/Sobre.cshtml
+++ b/VolunTree_API/Pages/Sobre.cshtml
@@ -31,8 +31,18 @@
     </div>
 </div><!--Fim MODAL-->
 <!--EquipeCão ++++++++++-->
-<div class="container mt-3 d-flex">
+<div class="container mt-3">
+<h1>Sobre</h1>
+<p>Voluntree é um site com intuito de facilitar a conexão entre voluntários e ONGS</p>
+<p>O site foi contruído com bootstrap e com a tecnologia MVC</p>
+<h3>desenvolvedores:</h3>
+<div class="container mt-3">
     <!--tirei o row-->
+    <p >Caio: backend</p>
+    <p >Hudson: backend</p>
+    <p >Kayky: frontend</p>
+    <p>Paulo: frontend</p>
+    <!--
     <div class="col-2 p-2">
         <div class="list-group" id="list-tab" role="tablist">
             <a class="list-group-item list-group-item-action active" id="list-caio-list" data-bs-toggle="list" href="#list-caio" role="tab" aria-controls="list-home">Caio</a>
@@ -44,14 +54,15 @@
     </div>
     <div class="col-3 p-2">
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="list-caio" role="tabpanel" aria-labelledby="list-caio-list">Desenvolvedor...<br />frase que marca o projeto:</div>
-            <div class="tab-pane fade" id="list-fabio" role="tabpanel" aria-labelledby="list-fabio-list">Desenvolvedor:...       <br />frase que marca o projeto:</div>
-            <div class="tab-pane fade" id="list-hudson" role="tabpanel" aria-labelledby="list-hudson-list">Desenvolvedor:...       <br />frase que marca o projeto:</div>
-            <div class="tab-pane fade" id="list-kayky" role="tabpanel" aria-labelledby="list-kayky-list">Desenvolvedor:...       <br />frase que marca o projeto:</div>
-            <div class="tab-pane fade" id="list-paulo" role="tabpanel" aria-labelledby="list-paulo-list">Desenvolvedor:...      <br />frase que marca o projeto:"Se você está vendo algo de errado... o que você está fazendo para mudar!?" </div>
+            <div class="tab-pane fade show active" id="list-caio" role="tabpanel" aria-labelledby="list-caio-list">Desenvolvedor backend<br /></div>
+            <div class="tab-pane fade" id="list-fabio" role="tabpanel" aria-labelledby="list-fabio-list">Desenvolvedor backend       <br /></div>
+            <div class="tab-pane fade" id="list-hudson" role="tabpanel" aria-labelledby="list-hudson-list">Desenvolvedor backend      <br /></div>
+            <div class="tab-pane fade" id="list-kayky" role="tabpanel" aria-labelledby="list-kayky-list">Desenvolvedor frontend      <br /</div>
+            <div class="tab-pane fade" id="list-paulo" role="tabpanel" aria-labelledby="list-paulo-list">Desenvolvedor frontend     <br /></div>
         </div>
     </div>
-</div><!--EQUIEPECÃO-->
+</div>
+</div>--Centro--><!--EQUIEPECÃO-->
 <!--=============FIM DO <MAIN>=============-->
 <!--USAR no Arquivo ONGS para mudar de página TESTE:SEM O D-NONE -->
 <!--<div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
